--- a/ansible/initiate.yaml
+++ b/ansible/initiate.yaml
@@ -7,7 +7,7 @@
       shell: rpm -iUvh http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-5.noarch.rpm && yum -y update
 
     - name: install java
-      shell: yum -y install java-1.6.0-openjdk-devel
+      yum: name=java-1.6.0-openjdk-devel
 
     - name: install lein
       shell: wget https://github.com/technomancy/leiningen/raw/stable/bin/lein --no-check-certificate -O /usr/local/bin/lein
