--- a/ansible/initiate.yaml
+++ b/ansible/initiate.yaml
@@ -2,11 +2,25 @@
 - hosts: webservers
   remote_user: root
   gather_facts: no
+  vars_files:
+    - vars/database.yaml
 
   tasks:
     - file: path=/var/projects/ state=directory mode=0755
     - file: path=/var/log/quicksilver/ state=directory mode=0755
     - copy: src=./quicksilver-upstart.service dest=/lib/systemd/system/quicksilver.service
+    - file: path=/etc/sysconfig/quicksilver state=touch mode=0755
+    - name: check ENV DB_PASSWORD
+      lineinfile: dest=/etc/sysconfig/quicksilver
+                  regexp='^DB_PASSWORD='
+                  line='DB_PASSWORD="{{db_password}}"'
+                  state=present
+
+    - name: check ENV NOMAD_ENV
+      lineinfile: dest=/etc/sysconfig/quicksilver
+                  regexp='^NOMAD_ENV='
+                  line="NOMAD_ENV=prod"
+                  state=present
 
     - name: update yum
       shell: rpm -iUvh http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-5.noarch.rpm && yum -y update
