--- a/ansible/initiate.yaml
+++ b/ansible/initiate.yaml
@@ -37,16 +37,23 @@
     - name: install nginx
       yum: name=nginx
 
+    - name: copy certs
+      copy: src=~/bwd_cat/{{item}} dest=/etc/ssl/{{item}}
+      with_items:
+        - bwd.cat.chained.crt
+        - bwd.cat.key
+      notify: reload nginx
+
     - name: configure nginx
       copy: src=./quicksilver-nginx.conf dest=/etc/nginx/conf.d/default.conf
-      notify: restart nginx
+      notify: reload nginx
 
     - service: name=nginx
                 enabled=yes
                 state=started
 
   handlers:
-    - name: restart nginx
+    - name: reload nginx
       service: name=nginx
-                state=restarted
+                state=reloaded
 
