--- a/ansible/quicksilver-nginx.conf
+++ b/ansible/quicksilver-nginx.conf
@@ -1,6 +1,9 @@
 server{
   listen 0.0.0.0:80;
-  server_name bwd.cat 46.101.221.64;
+  listen 0.0.0.0:443 ssl;
+  server_name         bwd.cat www.bwd.cat 46.101.221.64;
+  ssl_certificate     /etc/ssl/bwd.cat.chained.crt;
+  ssl_certificate_key /etc/ssl/bwd.cat.key;
 
   access_log /var/log/quicksilver/nginx_access.log;
   error_log /var/log/quicksilver/nginx_error.log;
