--- a/ansible/quicksilver-nginx.conf
+++ b/ansible/quicksilver-nginx.conf
@@ -1,3 +1,8 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 server{
   listen 0.0.0.0:80;
   listen 0.0.0.0:443 ssl;
@@ -10,6 +15,9 @@ server{
 
   location / {
     proxy_pass http://localhost:8080/;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
     proxy_set_header Host $http_host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
