--- a/ansible/initiate.yaml
+++ b/ansible/initiate.yaml
@@ -17,6 +17,12 @@
                   line='DB_PASSWORD="{{db_password}}"'
                   state=present
 
+    - name: check ENV QS_AUTH_SALT
+      lineinfile: dest=/etc/sysconfig/quicksilver
+                  regexp='^QS_AUTH_SALT='
+                  line='QS_AUTH_SALT="{{qs_auth_salt}}"'
+                  state=present
+
     - name: check ENV NOMAD_ENV
       lineinfile: dest=/etc/sysconfig/quicksilver
                   regexp='^NOMAD_ENV='
