--- a/ansible/deploy.yaml
+++ b/ansible/deploy.yaml
@@ -8,6 +8,10 @@
         dest=/var/projects/quicksilver-latest.jar
         force=yes
 
+    - name: upload static
+      copy: src=../resources/public
+        dest=/var/projects/quicksilver/
+
     - name: copy an artifact
       shell: cp /var/projects/quicksilver-latest.jar /var/projects/quicksilver-`date -u -Iseconds`.jar
 
