--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/resources/public/js/compiled
+figwheel_server.log
 /target
 /classes
 /checkouts
@@ -7,5 +9,3 @@ pom.xml.asc
 *.class
 /.lein-*
 /.nrepl-port
-.hgignore
-.hg/
