--- a/ansible/quicksilver-nginx.conf
+++ b/ansible/quicksilver-nginx.conf
@@ -23,4 +23,9 @@ server{
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_redirect  off;
   }
+
+  location /static {
+    alias /var/projects/quicksilver/public;
+    autoindex off;
+  }
 }
