--- a/ansible/quicksilver-nginx.conf
+++ b/ansible/quicksilver-nginx.conf
@@ -9,6 +9,8 @@ server{
   server_name         bwd.cat www.bwd.cat 46.101.221.64;
   ssl_certificate     /etc/ssl/bwd.cat.chained.crt;
   ssl_certificate_key /etc/ssl/bwd.cat.key;
+  ssl_session_cache shared:SSL:20m;
+  ssl_session_timeout 180m;
 
   access_log /var/log/quicksilver/nginx_access.log;
   error_log /var/log/quicksilver/nginx_error.log;
