--- a/ansible/quicksilver-nginx.conf
+++ b/ansible/quicksilver-nginx.conf
@@ -1,9 +1,18 @@
 map $http_upgrade $connection_upgrade {
-    default upgrade;
-    ''      close;
+  default upgrade;
+  ''      close;
 }
 
-server{
+upstream backend {
+  server localhost:8080;
+
+  # server localhost:8081 backup;
+}
+
+worker_processes 1;
+worker_connections 1024;
+
+server {
   listen 0.0.0.0:80;
   listen 0.0.0.0:443 ssl;
   server_name         bwd.cat www.bwd.cat 46.101.221.64;
@@ -15,8 +24,12 @@ server{
   access_log /var/log/quicksilver/nginx_access.log;
   error_log /var/log/quicksilver/nginx_error.log;
 
+  gzip on;
+  keepalive_timeout 15;
+
   location / {
-    proxy_pass http://localhost:8080/;
+    proxy_pass http://backend;
+    # health_check;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
