oops. no time to fix

--- a/ansible/quicksilver-nginx.conf
+++ b/ansible/quicksilver-nginx.conf
@@ -9,8 +9,8 @@ upstream backend {
   # server localhost:8081 backup;
 }
 
-worker_processes 1;
-worker_connections 1024;
+# worker_processes 1;
+# worker_connections 1024;
 
 server {
   listen 0.0.0.0:80;
