serve blackwidow static

--- a/ansible/initiate.yaml
+++ b/ansible/initiate.yaml
@@ -8,6 +8,7 @@
   tasks:
     - file: src=/usr/share/zoneinfo/UTC dest=/etc/localtime state=link force=yes
     - file: path=/var/projects/ state=directory mode=0755
+    - file: path=/var/projects/blackwidow/dist state=directory mode=0755 # for static blackwidow
     - file: path=/var/log/quicksilver/ state=directory mode=0755
     - copy: src=./quicksilver-upstart.service dest=/lib/systemd/system/quicksilver.service
     - file: path=/etc/sysconfig/quicksilver state=touch mode=0755
