--- a/ansible/quicksilver-nginx.conf
+++ b/ansible/quicksilver-nginx.conf
@@ -15,8 +15,8 @@ upstream backend {
 server {
   listen 0.0.0.0:80;
   listen 0.0.0.0:443 ssl;
-  server_name         bwd.cat www.bwd.cat 46.101.221.64;
-  ssl_certificate     /etc/ssl/bwd.cat.chained.crt;
+  server_name bwd.cat www.bwd.cat 46.101.221.64;
+  ssl_certificate /etc/ssl/bwd.cat.chained.crt;
   ssl_certificate_key /etc/ssl/bwd.cat.key;
   ssl_session_cache shared:SSL:20m;
   ssl_session_timeout 180m;
@@ -25,9 +25,20 @@ server {
   error_log /var/log/quicksilver/nginx_error.log;
 
   gzip on;
+  gzip_static on;
   keepalive_timeout 15;
 
   location / {
+    root /var/projects/blackwidow/dist;
+    try_files $uri $uri/index.html $uri.html @backend;
+  }
+
+  location ~* \.(?:ico|css|js|json|gif|jpe?g|png)$ {
+    root /var/projects/blackwidow/dist;
+    access_log off;
+  }
+
+  location @backend {
     proxy_pass http://backend;
     # health_check;
     proxy_http_version 1.1;
@@ -36,11 +47,6 @@ server {
     proxy_set_header Host $http_host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_redirect  off;
-  }
-
-  location /static {
-    alias /var/projects/quicksilver/public;
-    autoindex off;
+    proxy_redirect off;
   }
 }
