move more configuration to the environment

--- a/ansible/env.yaml
+++ b/ansible/env.yaml
@@ -7,6 +7,24 @@
 
   tasks:
     - file: path=/etc/sysconfig/quicksilver state=touch mode=0755
+    - name: check ENV DB_HOST
+      lineinfile: dest=/etc/sysconfig/quicksilver
+                  regexp='^DB_HOST='
+                  line='DB_HOST="{{db_host}}"'
+                  state=present
+
+    - name: check ENV DB_PORT
+      lineinfile: dest=/etc/sysconfig/quicksilver
+                  regexp='^DB_PORT='
+                  line='DB_PORT={{db_port}}'
+                  state=present
+
+    - name: check ENV DB_USER
+      lineinfile: dest=/etc/sysconfig/quicksilver
+                  regexp='^DB_USER='
+                  line='DB_USER="{{db_user}}"'
+                  state=present
+
     - name: check ENV DB_PASSWORD
       lineinfile: dest=/etc/sysconfig/quicksilver
                   regexp='^DB_PASSWORD='
@@ -41,4 +59,22 @@
       lineinfile: dest=/etc/sysconfig/quicksilver
                   regexp='^BWD_SLACK_AUTHORS='
                   line='BWD_SLACK_AUTHORS="{{slack_authors}}"'
+                  state=present
+
+    - name: check ENV BWD_BASE_URL
+      lineinfile: dest=/etc/sysconfig/quicksilver
+                  regexp='^BWD_BASE_URL='
+                  line='BWD_BASE_URL="bwd.cat"'
+                  state=present
+
+    - name: check ENV BWD_PORT
+      lineinfile: dest=/etc/sysconfig/quicksilver
+                  regexp='^BWD_PORT='
+                  line='BWD_PORT=8080'
+                  state=present
+
+    - name: check ENV BWD_FRONTEND_URL
+      lineinfile: dest=/etc/sysconfig/quicksilver
+                  regexp='^BWD_FRONTEND_URL='
+                  line='BWD_FRONTEND_URL="https://bwd.cat/"'
                   state=present
