--- a/ansible/quicksilver-nginx.conf
+++ b/ansible/quicksilver-nginx.conf
@@ -16,8 +16,8 @@ server {
   listen 0.0.0.0:80;
   listen 0.0.0.0:443 ssl;
   server_name bwd.cat www.bwd.cat 46.101.221.64;
-  ssl_certificate /etc/ssl/bwd.cat.chained.crt;
-  ssl_certificate_key /etc/ssl/bwd.cat.key;
+  ssl_certificate /etc/letsencrypt/live/bwd.cat/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/bwd.cat/privkey.pem;
   ssl_session_cache shared:SSL:20m;
   ssl_session_timeout 180m;
 
