nginx.org repo rpm
because epel has 1.10.2 as the latest version

http://mailman.nginx.org/pipermail/nginx-announce/2017/000200.html

--- a/ansible/initiate.yaml
+++ b/ansible/initiate.yaml
@@ -24,6 +24,10 @@
     - name: make lein executable
       shell: chmod 775 /usr/local/bin/lein
 
+    - name: installing NGINX repo rpm
+      yum:
+        name: http://nginx.org/packages/centos/7/noarch/RPMS/nginx-release-centos-7-0.el7.ngx.noarch.rpm
+
     - name: install nginx
       yum: name=nginx
 
